Add required changes

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <title>Fifa Ranking Leaderboard</title>
 </head>
 <body>
+    <header>
+        <h1>Leaderboard</h1>
+    </header>
     <div class="container">
         <div class="form-side">
             <h2>
@@ -20,7 +23,7 @@
         </div>
         <div class="leader-side">
             <div class="leader-header">
-               <h2>The Player Rankings</h2>
+               <h2>Rankings</h2>
                <button type="submit" id="refresh-btn">Refresh</button> 
             </div>
 
